# discord-overlay

./: CMakeLists.txt  README.md
ext/imgui/: ImGuiNotify.hpp
ext/imgui_texteditor/: TextEditor.cpp  TextEditor.h
src/: includes.hpp  main.cpp
src/overlay/: menu.hpp  overlay.hpp
